hphp/hack/test/typecheck/shape/nullable_shape_disallows_indexing.php
<?hh //strict

function foo(): void {
  $bar = (true ? array('a' => 5) : null)['a'];
}
